--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://JK-Siddhartha.github.io/routerapp",  
+  "homepage": "https://JK-Siddhartha.github.io/router-app",  
   "name": "routerapp",
   "version": "0.1.0",
   "private": true,
